# film2subtitle

./: .deepsource.toml  .gitignore  .gitpod.yml  .pre-commit-config.yaml  CHANGELOG.md  Procfile  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: main.yml
film2subtitle/: __main__.py
film2subtitle/app/: main.py
film2subtitle/app/api/: __init__.py  dependency.py  health.py
film2subtitle/app/api/v1/: __init__.py
film2subtitle/app/api/v1/endpoints/: login.py  subtitles.py  users.py
film2subtitle/app/core/: config.py  security.py
film2subtitle/app/crud/: __init__.py  base.py  crud_user.py
film2subtitle/app/db/: base.py  base_class.py  init_db.py  session.py
film2subtitle/app/handler/: __init__.py  errors.py  handler.py  parsers.py  sess.py  types.py  utils.py
film2subtitle/app/models/: user.py
film2subtitle/app/schemas/: __init__.py  health.py  subtitles.py  user.py
