[tool.poetry]
name = "film2subtitle"
version = "1.0.4"
description = "A REST API for film2subtitle.com website built with Python and FastAPI web framework."
authors = ["Iliya <IHosseini083@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/IHosseini083/film2subtitle"
keywords = [
    "python",
    "fastapi",
    "subtitle",
    "rest-api",
    "beautifulsoup",
]

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.17.6"
fastapi = "^0.86.0"
lxml = "^4.8.0"
bs4 = "^0.0.1"
pre-commit = "^2.18.1"
httpx = "^0.23.0"
python-dotenv = "^0.20.0"
gunicorn = "^20.1.0"
SQLAlchemy = "^1.4.36"
psycopg2 = "^2.9.3"
email-validator = "^1.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[tool.poetry.scripts]
# A script to run the development server.
dev-server = "film2subtitle.__main__:run_uvicorn_server"

[tool.isort]
profile = "black"
skip_gitignore = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
